# cargo-lock2rpmprovides

./: Cargo.toml  README.md
src/: main.rs
