[package]
name = "cargo-lock2rpmprovides"
version = "0.1.0"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
toml = "0.5"
serde_derive = "1.0"
serde = "1.0"
